<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Электронная библиотека</string>
    
    <!-- Auth -->
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="logout">Выйти</string>
    
    <!-- Navigation -->
    <string name="home">Категории</string>
    <string name="catalog">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Профиль</string>
    
    <!-- Books -->
    <string name="books">Книги</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск по названию, автору, жанру</string>
    <string name="author">Автор</string>
    <string name="genre">Жанр</string>
    <string name="read">Читать</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="remove_from_favorites">Удалить из избранного</string>
    <string name="description">Описание</string>
    <string name="my_books">Мои книги</string>
    <string name="rate_book">Оценить книгу</string>
    <string name="your_rating_placeholder">Оцените книгу</string>
    <string name="your_rating_value">Ваша оценка: %1$d</string>
    <string name="rating_saved">Оценка сохранена</string>
    <string name="login_to_rate">Войдите, чтобы оценивать книги</string>
    <string name="rating_not_available">Рейтинг: нет оценок</string>
    
    <!-- Admin -->
    <string name="admin_panel">Панель администратора</string>
    <string name="manage_books">Управление книгами</string>
    <string name="manage_users">Управление пользователями</string>
    <string name="add_book">Добавить книгу</string>
    <string name="edit_book">Редактировать книгу</string>
    <string name="delete_book">Удалить книгу</string>
    
    <!-- Messages -->
    <string name="loading">Загрузка...</string>
    <string name="error">Ошибка</string>
    <string name="success">Успешно</string>
    <string name="no_books">Книги не найдены</string>
    <string name="no_favorites">У вас пока нет избранных книг</string>
    
</resources>

